Release 2.4

#101 Create a URLExtractorModelLoader
#132 @AfterTargetsMapped listeners are not invoked in CreateOrUpdate tasks
#134 ValueConverter for enums
#135 Refactoring JdbcNormalizer to ValueConverter
#138 Split IExtractorModelLoader into ResourceResolver and ExtractorModelParser


Release 2.3

#122 Respect original types of JSON source row attributes
#123 String normalizer
#128 Support java.math big numeric types in Integer and Long normalizers
#129 (2.x) Upgrade to Cayenne 4.0.B1

Release 2.2

#113 Upgrade Cayenne to 4.0.M4 to fix overlapping transactions
#114 Targets mapped event before merging update
#116 tokenManager is null in DefaultDeleteBuilder
#117 JdbcNormalizer for java.time classes
#120 Multiple connectors for a single extractor
#121 upgrade to Cayenne 4.0.M5

Release 2.1

#112 API for external access to DI-managed entities
#110 Relocate the schema to linkmove.io

Release 2.0

#71  DataSourceConnector: Out-of-the-box Java 8 support
#104 Boolean JDBC normalizer fails to normalize a java.lang.Boolean 
#106 Listener for the after targets committed stage
#107 Switch to Java 8
#108 Change license from BSD to Apache 2.0
#109 Switch version from 1.8 to 2.0

Release 1.7

#72 Conflict between source and target DataSources
#78 Split link-move into a multi-module Maven project, with specialized extractors in submodules
#83 Support untyped predicates in JSONPath queries
#84 BigIntNormalizer must handle String values
#86 XmlExtractor should treat attribute's source name as XPath expression
#87 JsonExtractor should treat attribute's source name as JsonPath expression
#88 JdbcNormalizer for SQL Integer
#89 Implement parent access in JsonPath
#90 Include deleted count into report
#91 Similar decimal values cause db update
#92 Use target's Java type to normalize sources
#93 Boolean normalizer (sync integers to booleans without updates)
#94 Do not create TargetToOnePropertyWriter for the master side of a to-one relationship
#95 Switch to Commons CSV parser