@@ -1,6 +1,8 @@
 package com.nhl.link.move.resource;
 
 import com.nhl.link.move.LmRuntimeException;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import java.io.IOException;
 import java.io.InputStreamReader;
@@ -14,11 +16,13 @@ import java.net.URL;
  */
 public class ClasspathResourceResolver implements ResourceResolver {
 
+    private static final Logger LOGGER = LoggerFactory.getLogger(ClasspathResourceResolver.class);
+
     @Override
     public Reader reader(String name) {
 
-        // TODO: get rid of the XML extension convention
         if (!name.endsWith(".xml")) {
+            complainOfExtension(name);
             name = name + ".xml";
         }
 
@@ -32,5 +36,14 @@ public class ClasspathResourceResolver implements ResourceResolver {
         } catch (IOException e) {
             throw new LmRuntimeException("Error reading classpath extractor config XML", e);
         }
+    }
+
+    /**
+     * @param name
+     * @deprecated since 2.4
+     */
+    @Deprecated
+    private void complainOfExtension(String name) {
+        LOGGER.warn("*** Implicit extension name is deprecated. Use '{}.xml' instead of '{}'", name, name);
     }
 }
