@@ -47,8 +47,8 @@ public class FolderResourceResolver implements ResourceResolver {
 
     protected File getFile(String name) {
 
-        // TODO: get rid of the XML extension convention
         if (!name.endsWith(".xml")) {
+            complainOfExtension(name);
             name += ".xml";
         }
 
@@ -65,4 +65,12 @@ public class FolderResourceResolver implements ResourceResolver {
         return file;
     }
 
+    /**
+     * @param name
+     * @deprecated since 2.4
+     */
+    @Deprecated
+    private void complainOfExtension(String name) {
+        LOGGER.warn("*** Implicit extension name is deprecated. Use '{}.xml' instead of '{}'", name, name);
+    }
 }
