@@ -1,15 +1,14 @@
 package com.nhl.link.move.itest;
 
-import static org.junit.Assert.assertEquals;
-
-import com.nhl.link.move.runtime.task.ITaskService;
-import org.junit.Test;
-
-import com.nhl.link.move.LmTask;
 import com.nhl.link.move.Execution;
 import com.nhl.link.move.IntToken;
+import com.nhl.link.move.LmTask;
+import com.nhl.link.move.runtime.task.ITaskService;
 import com.nhl.link.move.unit.LmIntegrationTest;
 import com.nhl.link.move.unit.cayenne.t.Etl1t;
+import org.junit.Test;
+
+import static org.junit.Assert.assertEquals;
 
 public class CreateOrUpdateWithTokenIT extends LmIntegrationTest {
 
@@ -17,7 +16,7 @@ public class CreateOrUpdateWithTokenIT extends LmIntegrationTest {
 	public void test_ByAttribute() {
 
 		LmTask task = etl.service(ITaskService.class).createOrUpdate(Etl1t.class)
-				.sourceExtractor("com/nhl/link/move/itest/etl1_to_etl1t_withtoken").matchBy(Etl1t.NAME).task();
+				.sourceExtractor("com/nhl/link/move/itest/etl1_to_etl1t_withtoken.xml").matchBy(Etl1t.NAME).task();
 
 		srcRunSql("INSERT INTO utest.etl1 (NAME, AGE) VALUES ('a', 3)");
 		srcRunSql("INSERT INTO utest.etl1 (NAME, AGE) VALUES ('b', 1)");
