@@ -1,15 +1,5 @@
 package com.nhl.link.move.itest.runtime.task.createorupdate;
 
-import static org.junit.Assert.assertNotNull;
-import static org.mockito.Matchers.any;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.when;
-
-import com.nhl.link.move.writer.ITargetPropertyWriterService;
-import org.apache.cayenne.map.ObjEntity;
-import org.junit.Before;
-import org.junit.Test;
-
 import com.nhl.link.move.runtime.cayenne.ITargetCayenneService;
 import com.nhl.link.move.runtime.cayenne.TargetCayenneService;
 import com.nhl.link.move.runtime.extractor.IExtractorService;
@@ -20,6 +10,15 @@ import com.nhl.link.move.runtime.task.createorupdate.DefaultCreateOrUpdateBuilde
 import com.nhl.link.move.runtime.token.ITokenManager;
 import com.nhl.link.move.unit.DerbySrcTargetTest;
 import com.nhl.link.move.unit.cayenne.t.Etl1t;
+import com.nhl.link.move.writer.ITargetPropertyWriterService;
+import org.apache.cayenne.map.ObjEntity;
+import org.junit.Before;
+import org.junit.Test;
+
+import static org.junit.Assert.assertNotNull;
+import static org.mockito.Matchers.any;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
 
 public class DefaultCreateOrUpdateBuilderIT extends DerbySrcTargetTest {
 
@@ -51,7 +50,7 @@ public class DefaultCreateOrUpdateBuilderIT extends DerbySrcTargetTest {
 				mock(IExtractorService.class), mock(ITokenManager.class), mock(IKeyAdapterFactory.class),
 				mockPathNormalizer, mock(ITargetPropertyWriterService.class));
 
-		builder.sourceExtractor("test");
+		builder.sourceExtractor("test.xml");
 		assertNotNull(builder.task());
 	}
 }
