@@ -5,6 +5,7 @@ Release 2.4
 #134 ValueConverter for enums
 #135 Refactoring JdbcNormalizer to ValueConverter
 #138 Split IExtractorModelLoader into ResourceResolver and ExtractorModelParser
+#139 Deprecate implicit .xml extension
 
 
 Release 2.3
